--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <title>Sonik Jhang</title>
 
+    <script src="build/bundle.js"></script>
     <link rel="stylesheet" href="assets/css/application.css" type="text/css" >
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <script src="https://use.fontawesome.com/f56eb72a81.js"></script>
   </head>
   <body>
     <main id="root"></main>
-    <script src="./build/bundle.js"></script>
   </body>
 </html>
