--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="build/bundle.js"></script>
     <link rel="stylesheet" href="assets/css/application.css" type="text/css" >
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,400,600" rel="stylesheet">
     <script src="node_modules/clipboard/dist/clipboard.min.js"></script>
     <script src="https://use.fontawesome.com/f56eb72a81.js"></script>
   </head>
