--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <script src="build/bundle.js"></script>
     <link rel="stylesheet" href="assets/css/application.css" type="text/css" >
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans:300,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,400,600" rel="stylesheet">
